--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ i18n_dir: :lang
 # Writing
 new_post_name: :year-:month-:day-:title.md # File name of new posts
 default_layout: post
-titlecase: false # Transform title into titlecase
+titlecase: true # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 1
 render_drafts: false
