--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -465,8 +465,8 @@ needmoreshare2:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
-google_site_verification: zys5KlgPJ2YqD5Ejok6AfLU1pAUHsP_oAXB8xfxplTE
-baidu_site_verification: 0j7dHiXSag
+google_site_verification: hhAIztYjaGgI16J5GkvQZNanhkhdAo47vgQ15DSpx9Y
+baidu_site_verification: uy1wFQLloq
 # Google Analytics
 google_analytics: UA-113142593-1
 
